# qlib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  cpplint.py  setup.py
cmake/: .keep  aarch64_gnu_toolchain.cmake  compile.cmake  config.cmake  defines.cmake  find_thirdparty.cmake  install.cmake  python3.cmake  qlib-config.cmake.in  qlibConfig.cmake.in  spdlog.cmake  tests.cmake  x64_clang_toolchain.cmake  x64_gnu_toolchain.cmake
cmake/project/: apriltags.cmake  argparse.cmake  boost.cmake  dds.cmake  eigen.cmake  fastdds.cmake  ffmpeg.cmake  live555.cmake  logger.cmake  mqtt.cmake  nlohmann_json.cmake  opencv2.cmake  paho-mqtt-cpp.cmake  psdk.cmake  spdlog.cmake  usb.cmake  yaml-cpp.cmake  yaml.cmake
examples/benchmark/: CMakeLists.txt  main.cpp
examples/benchmark1/: CMakeLists.txt  main.cpp
examples/benchmark_any/: CMakeLists.txt  main.cpp
examples/benchmark_string/: CMakeLists.txt  main.cpp
examples/benchmark_vector/: CMakeLists.txt  main.cpp
examples/dump/: CMakeLists.txt  main.cpp
examples/dump1/: CMakeLists.txt  main.cpp
examples/logger/: CMakeLists.txt  main.cpp
examples/parse/: CMakeLists.txt  main.cpp
examples/parse_file/: CMakeLists.txt  main.cpp
examples/smart_home/: .gitignore  CMakeLists.txt  audio.hpp  config.yaml  kws.hpp  logger.h  logger.hpp  main.cpp  nlu.h  nlu.hpp  nlu.json  profile.h  recognizer.hpp  rules.json  wav.h
examples/test_any/: CMakeLists.txt  main.cpp
examples/test_any_cpp14/: CMakeLists.txt
examples/test_data/: CMakeLists.txt
examples/test_data_cpp14/: CMakeLists.txt  main.cpp
examples/test_json/: CMakeLists.txt
examples/test_json_cpp14/: CMakeLists.txt
examples/test_memory/: CMakeLists.txt
examples/test_memory_cpp14/: CMakeLists.txt
examples/test_string/: CMakeLists.txt
examples/test_string_cpp14/: CMakeLists.txt  main.cpp
examples/test_vector/: CMakeLists.txt
examples/test_vector_cpp14/: CMakeLists.txt
examples/test_yaml/: CMakeLists.txt
examples/test_yaml_cpp14/: CMakeLists.txt
include/: QException.h  QImage.h  QLoader.h  QLog.h  QModel.h  QModule.h  QObject.h  QOnnxRuntime.h  QProgressBar.h  QSingletonProductor.h  QTensor.h  QTimeProfile.h
include/qlib/: QAlgorithm.h  QImage.h  any.h  any.hpp  application.h  argparse.h  argparse.hpp  config.h  converter.h  data.h  data.hpp  dds.h  exception.h  format.h  format.hpp  json.h  json.hpp  loader.h  logger.h  logger.hpp  memory.h  memory.hpp  module.h  mqtt.h  object.h  object.hpp  profile.h  progress_bar.h  psdk.h  queue.h  rtsp.h  singleton.h  smoother.h  sockets.h  string.h  string.hpp  vector.h  vector.hpp  yaml.h  yaml.hpp
keep/: QImage.cpp  QOnnxRuntime.h  loadder_test.cpp  progress_bar.h  queue.h  rtsp.cpp  rtsp.h  sockets.h
keep/cuda/: CMakeLists.txt  kernel.cu  main.cpp
keep/test/: CMakeLists.txt  main.cpp
keep/tests/: dds_sequence.cpp  exception.cpp
package/: main.py  test.py
scripts/: compile.py  downloader.py  logger.py  mp3.py  replace.py  song.py  write.py
src/: QImage.cpp  QObject.cpp  QOnnxRuntime.cpp  argparse.cpp  dds.cpp  dds_python.cpp  ffmpeg.cpp  psdk.cpp  yaml.cpp
tests/: CMakeLists.txt  argparse.cpp  dds.cpp  dds1.cpp  dds_sequence.cpp  dds_test.cpp  exception_test.cpp  loadder_test.cpp  log_test.cpp  logger.cpp
tests/test_any/: main.cpp
tests/test_any_cpp14/: main.cpp
tests/test_data/: main.cpp
tests/test_format/: main.cpp
tests/test_format_cpp14/: main.cpp
tests/test_json/: main.cpp
tests/test_json_cpp14/: main.cpp
tests/test_memory_cpp14/: main.cpp
tests/test_string/: main.cpp
tests/test_vector_cpp14/: main.cpp
tests/test_yaml/: main.cpp
